# cpp-instance-manager

./: .gitignore  CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  abstract.h  abstract_custom.cpp  abstract_custom.h  abstract_default.cpp  abstract_default.h  action.cpp  action.h  main.cpp  pool.cpp  pool.h  registrator.cpp  registrator.h  root.cpp  root.h  single.cpp  single.h
example/log/: abstract_logger.h  complex_logger.cpp  complex_logger.h  db_logger.cpp  db_logger.h  file_logger.cpp  file_logger.h  net_logger.cpp  net_logger.h
src/: CMakeLists.txt  abstract_context.h  abstract_instance_manager.h  base_instance_manager.h  build_item.h  builder.h  container.h  context.cpp  context.h  core.cpp  core.h  dependency_helper.cpp  dependency_helper.h  instance_count_option_enum.h  lock_pool_instance_manager.h  multiple_instance_manager.h  pool_context.h  pool_instance_manager.h  ptr_holder.cpp  ptr_holder.h  resolver.h  single_instance_manager.h  weak_context.h
src/cpptoolkit/factory/: builder.h  container.cpp  core.h  core_extension.h  ptr_holder.cpp  u_ptr.h
src/cpptoolkit/factory/manager/: base_instance_manager.h  lock_pool_instance_manager.h  multiple_instance_manager.h  resolver.h  single_instance_manager.h  soft_pool_instance_manager.h  unique_ptr_tool.h
src/cpptoolkit/factory/manager/context/: abstract_context.h  base_context.h  context.h  dependency_container.h  error_context.h  pool_context.h  ptr_holder.h  u_ptr.h  weak_context.h
src/cpptoolkit/factory/tool/: build_item.h  common.h  deleter.h  instance_count_option_enum.h
test/: CMakeLists.txt  common.h  test_base_instance_manager.cpp  test_build_item.cpp  test_build_item.h  test_builder.cpp  test_builder.h  test_context.cpp  test_context.h  test_core.cpp  test_core.h  test_deleter.cpp  test_lock_pool_instance_manager.cpp  test_main.cpp  test_manager.h  test_multiple_instance_manager.cpp  test_pool_instance_manager.cpp  test_ptr_holder.cpp  test_resolver.cpp  test_single_instance_manager.cpp  test_soft_pool_instance_manager.cpp  test_u_ptr.cpp
test/mock/: fixture.cpp  fixture.h  mock_unit_error.h  mock_unit_level_1.cpp  mock_unit_level_1.h  mock_unit_level_2.cpp  mock_unit_level_2.h  mock_unit_level_3.cpp  mock_unit_level_3.h  mock_unit_single_instance.cpp  mock_unit_single_instance.h  mock_unit_single_instance_top.cpp  mock_unit_single_instance_top.h
